Add rapidjson to be able to parse easily JSON files Add option the read the space tokens mapping from any of the following:  - overwriteSE option specified in the xrd.cf.rucio file  - JSON file from the AGIS web site  - local JSON file Add curl support for retrieving remote files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ set(LIB_INSTALL_DIR lib64)
 endif(MacOSX)
 
 find_package(XRootD REQUIRED)
+find_package(curl REQUIRED)
 
 set(CMAKE_INSTALL_PREFIX /usr/)
 add_subdirectory(src)
