Add dependency to OpenSSL (libcrypto) used to compute the MD5 hash of the file name Implement the translate method which does the actual conversion from the logical file name to the physical file name

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,7 +30,7 @@ add_library( EosRucioOfs MODULE
 	     EosRucioOfs.cc         EosRucioOfs.hh
 	     )
 
-target_link_libraries( EosRucioOfs XrdOfs XrdServer ${CURL_LIBRARIES})
+target_link_libraries( EosRucioOfs XrdOfs XrdServer ${CURL_LIBRARIES} crypto)
 
 if (Linux)
   set_target_properties ( EosRucioOfs PROPERTIES
